Updated wcc usages.

--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -1,4 +1,4 @@
 :root {
-    /*--wcc-app-menu-mode: horizontal;*/
-    /*--wcc-app-menu-mobile-breakpoint: 1200px;*/
+    /*--webc-app-menu-mode: horizontal;*/
+    /*--webc-app-menu-mobile-breakpoint: 1200px;*/
 }
