--- a/pages/webcardinal/components/psk-attachments-list.html
+++ b/pages/webcardinal/components/psk-attachments-list.html
@@ -36,12 +36,12 @@
     </psk-chapter>
 
     <psk-chapter title="Live example">
-        <wcc-bindable controller="AttachmentsController">
+        <webc-page controller="AttachmentsController">
             <psk-example class="app-example">
                 <psk-attachments-list attachments-class="example-attachments" files="@attachments">
                 </psk-attachments-list>
             </psk-example>
-        </wcc-bindable>
+        </webc-page>
     </psk-chapter>
 
 </psk-page>
