--- a/pages/webcardinal/components/webc-app-container.html
+++ b/pages/webcardinal/components/webc-app-container.html
@@ -1,4 +1,16 @@
+<style>
+    webc-link { white-space: nowrap; }
+    p { text-align: left !important; }
+</style>
+
 <psk-page title="Application container">
     <psk-toc title="Table of contents"></psk-toc>
-    <webc-docs for="webc-app-container"></webc-docs>
+    <webc-docs for="webc-app-container">
+        <psk-description title="Summary">
+            <p>
+                This web component is a wrapper over your application content, more precise over
+                <webc-link tag="webc-docs">webc-app-router</webc-link>.
+            </p>
+        </psk-description>
+    </webc-docs>
 </psk-page>
