--- a/pages/webcardinal/components/webc-docs.html
+++ b/pages/webcardinal/components/webc-docs.html
@@ -1,9 +1,20 @@
+<style>
+    psk-chapter[title="Usage"] psk-code pre {
+        margin-top: -1rem;
+    }
+</style>
 <psk-page title="Documentation">
     <psk-toc title="Table of contents"></psk-toc>
     <webc-docs for="webc-docs">
         <psk-description title="Summary">
-            <p>This component generate a visual representation of <strong>properties</strong>, <strong>events</strong>,
-                <strong>methods</strong>, <strong>slots</strong> and other useful information for developers.</p>
+            <p>
+                This component generates a visual representation of
+                <strong>properties</strong>,
+                <strong>events</strong>,
+                <strong>methods</strong>,
+                <strong>slots</strong>
+                and other useful information.
+            </p>
         </psk-description>
         <psk-chapter title="Usage">
             <psk-example>
