--- a/pages/webcardinal/components/webc-app-container.html
+++ b/pages/webcardinal/components/webc-app-container.html
@@ -7,10 +7,12 @@
     <psk-toc title="Table of contents"></psk-toc>
     <webc-docs for="webc-app-container">
         <psk-description title="Summary">
-            <p>
-                This web component is a wrapper over your application content, more precise over
-                <webc-link tag="webc-docs">webc-app-router</webc-link>.
-            </p>
+            <p>This web component is a wrapper over main content of your application.</p>
+            <psk-highlight type-of-highlight="example">
+                <code>webc-app-container</code> is an internal component used only by <webc-link tag="webc-app-root">webc-app-root</webc-link>.
+                <br>
+                <code>webc-app-container</code> must include only one <webc-link tag="webc-docs">webc-app-router</webc-link>.
+            </psk-highlight>
         </psk-description>
     </webc-docs>
 </psk-page>
