Replaced webc-page with webc-container. Added initial webcardinal form page. Moved webcardinal specific controllers to their correct folder.

--- a/pages/webcardinal/components/webc-docs.html
+++ b/pages/webcardinal/components/webc-docs.html
@@ -1,5 +1,5 @@
 <style>
-    webc-page {
+    webc-container {
         display: block;
         padding: 2rem;
     }
@@ -9,10 +9,10 @@
     }
 </style>
 
-<webc-page>
+<webc-container>
     <div class="docs-container">
         <webc-docs for="webc-modal" local></webc-docs>
 
         <webc-docs for="webc-app-container" local></webc-docs>
     </div>
-</webc-page>
+</webc-container>
