--- a/pages/webcardinal/components/webc-app-container.html
+++ b/pages/webcardinal/components/webc-app-container.html
@@ -7,7 +7,7 @@
     <psk-toc title="Table of contents"></psk-toc>
     <webc-docs for="webc-app-container">
         <psk-description title="Summary">
-            <p>This web component is a wrapper over main content of your application.</p>
+            <p>A wrapper over main content of your application.</p>
             <psk-highlight type-of-highlight="example">
                 <code>webc-app-container</code> is an internal component used only by <webc-link tag="webc-app-root">webc-app-root</webc-link>.
                 <br>
