--- a/assets/css/patches.css
+++ b/assets/css/patches.css
@@ -21,3 +21,8 @@
 webc-docs psk-description p {
     text-align: left;
 }
+
+psk-highlight .psk-highlight .body {
+    padding-left: 0.5rem !important;
+    text-align: left;
+}
