--- a/pages/webcardinal/components/webc-app-identity.html
+++ b/pages/webcardinal/components/webc-app-identity.html
@@ -1,4 +1,4 @@
-<psk-page title="Identity">
+<psk-page title="Application identity">
     <psk-toc title="Table of contents"></psk-toc>
     <webc-docs for="webc-app-identity">
         <psk-description title="Summary">
