--- a/pages/webcardinal/components/webc-app-root.html
+++ b/pages/webcardinal/components/webc-app-root.html
@@ -32,6 +32,7 @@
                     <code>webc-app-menu</code> and <code>webc-app-container</code> can be manged using slots, but <code>webc-app-error-toast</code> will be always appended.
                 </p>
             </small>
+            <p>The element is accessible from <code class="accent">window.WebCardinal.root</code>.</p>
         </psk-description>
         <psk-chapter title="Usage">
             <!-- normal usage -->
