--- a/pages/webcardinal/components/webc-app-router.html
+++ b/pages/webcardinal/components/webc-app-router.html
@@ -4,7 +4,7 @@
         padding-left: 1rem;
     }
 </style>
-<psk-page title="Router">
+<psk-page title="Application router">
     <psk-toc title="Table of contents"></psk-toc>
     <webc-docs for="webc-app-router">
         <psk-description title="Summary">
