--- a/pages/webcardinal/components/webc-app-menu.html
+++ b/pages/webcardinal/components/webc-app-menu.html
@@ -1,13 +1,13 @@
 <psk-page title="Application menu">
     <psk-toc title="Table of contents"></psk-toc>
     <webc-docs for="webc-app-menu">
-        <psk-chapter title="Summary">
+        <psk-description title="Summary">
             <p>
                 Aside menu with links for all configured pages from <code>webcardinal.json</code>.
             </p>
             <psk-highlight type-of-highlight="example">
                 <code>webc-app-menu</code> is an internal component used only by <webc-link tag="webc-app-root">webc-app-root</webc-link>.
             </psk-highlight>
-        </psk-chapter>
+        </psk-description>
     </webc-docs>
 </psk-page>
